# raytracer-shirley-rest

./: .gitignore  CMakeLists.txt
include/: aabb.hpp  aarect.hpp  box.hpp  bvh.hpp  camera.hpp  color.hpp  commons.hpp  functions.hpp  hittable.hpp  hittables.hpp  image.hpp  material.hpp  mediumc.hpp  onb.hpp  pdf.hpp  perlin.hpp  ray.hpp  sphere.hpp  texture.hpp  vec3.hpp
src/: cornell.cpp  final.cpp  final2.cpp
